# SkillRecon

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/test_index/: mixed_sample.jsonl  pure_js_sample.jsonl  (+4 more)
scripts/: build_ablation_artifacts.py  build_human_audit_study.py  build_llm_replacement_plan.py  build_reference_evaluation_placeholders.py  build_rq1_edge_validity_benchmark.py  build_rq1_gold_benchmark.py  build_rq2_extended_benchmark.py  build_seeded_gold_benchmark.py  check_submission_artifact.py  compute_rq2_statistics.py  manage_gold_labels.py  manage_paper_artifact_job.py  merge_baseline_predictions.py  merge_paper_gold_shards.py  prepare_paper_dataset.py  prepare_pilot_experiment.py  recover_partial_paper_artifact.py  render_markdown_report.py  render_pyvis.py  run_benign_probe_batch.py  run_contract.py  run_evaluation.py  run_experiments.py  run_external_baselines.py  run_full.py  run_paper_artifacts.py  run_paper_experiment_bundle.py  run_paper_gold_shards.py  run_reviewer_cases.py  run_smoke_eval.py  sample_benign_probe.py  select_benign_case_studies.py  sync_dataset_index.py  validate_external_baseline_placeholders.py  verify_codeql.sh
tests/: test_external_scanner_baselines.py  test_gold_builder.py  test_iccm_extractor.py  test_llm_client.py  test_method_alignment.py  test_paper_artifact_job_manager.py  test_paper_artifact_runner.py  test_paper_experiment_bundle.py  test_path_resolver.py  test_recover_partial_paper_artifact.py  test_rq2_statistics.py  test_skillrecon_adapter.py  test_submission_artifact.py
(+196 files in other folders)
