[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillrecon"
version = "0.1.0"
description = "Contract graph reconciliation for detecting intent-behavior inconsistency in agent skills."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Anonymous Author(s)" }]
keywords = [
    "static analysis",
    "agent skills",
    "contract reconciliation",
    "security",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic>=2.10,<3",
    "markdown-it-py>=3.0,<4",
    "openai>=1.50,<3",
    "httpx>=0.27,<1",
    "pyvis>=0.3.2,<0.4",
    "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
